# apps/routers/products.js
@@ -3,7 +3,7 @@ const router = express.Router();
 
 const productsController = require('../controllers/productControllers');
 
-router.get("/", productsController.getAllProducts);
+router.get("/getAllProduct", productsController.getAllProducts);
 router.post("/createProduct", productsController.createProduct);
 
 module.exports = router;
